# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2008 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.717 2008-07-19 21:30:15 mh Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (GPL). If you
# did not receive this file, see http://www.gnu.org/licenses/gpl-2.0.txt.
# --

2.3.0 rc1 (2008/07/??)
 - (2008/07/19) Fixed bug# 3098 - Ticket number search in the new link mask does
    not work correctly.
 - (2008/07/19) Fixed bug# 3093 - Foreign Key drop does not work.
 - (2008/07/19) Fixed bug# 2826 - Impossible to use DEFAULT values in SOPM
    files.
 - (2008/07/18) Fixed bug# 2893 - Allow translation texts with new lines.
 - (2008/07/17) Integrate function StatsCleanUp().
 - (2008/07/16) Fixed bug# 3089 - Stats module creates an error log entry with
    message "Got no SessionID" .
 - (2008/07/16) Fixed bug# 3088 - Statistics module fails with
    message "Got no AccessRw" if you work with ro permissions
 - (2008/07/16) Fixed bug# 3012 - Statistics module fails with
    message "Got no UserLanguage"
 - (2008/07/15) Moved config option PostMasterMaxEmailSize default 12 MB
    to 16 MB.
 - (2008/07/15) Fixed bug# 3082 - Wrong requirement checks and false default
    handling in function QueueAdd and QueueUpdate.
 - (2008/07/15) Updated french translation, thanks to Yann Richard!
 - (2008/07/14) Only show Company-NavBar item if CustomerCompanySupport is
    enabled for min. one CustomerUser source.
 - (2008/07/10) Fixed bug# 3066 - The CPAN module XML::Parser::Lite crashs after
    login if the CPAN module version is not installed.
 - (2008/07/09) Updated catalonian translation, thanks to Antonio Linde!
 - (2008/07/09) Updated finish translation, thanks to Mikko Hynninen!
 - (2008/07/09) Fixed problem in CodeUpgrade functionallity.
    Code did not react correctly to version number in CodeUpgrade sections.
 - (2008/07/08) Updated norwegian translation, thanks to Fredrik Andersen!
